--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import './units/variables';
 @import './components/global';
 @import './components/output';
+@import './components/buttons';
 // @import "./components/header";
 // @import "./components/mainSection";
 // @import "./components/footer";
