--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import './components/global';
 @import './components/output';
 @import './components/buttons';
+@import './components/tree';
 // @import "./components/header";
 // @import "./components/mainSection";
 // @import "./components/footer";
